# crm_system

./: .env.template  Dockerfile  README.md  docker-compose.yml
crm/crm/: settings.py  urls.py
crm/crm_app/: forms.py  models.py  urls.py  views.py
crm/crm_app/management/commands/: add_superuser.py
crm/crm_app/templates/: _base.html
crm/crm_app/templates/ads/: ads-create.html  ads-delete.html  ads-detail.html  ads-edit.html  ads-list.html  ads-statistic.html
crm/crm_app/templates/contracts/: contracts-create.html  contracts-delete.html  contracts-detail.html  contracts-edit.html  contracts-list.html
crm/crm_app/templates/customers/: customers-create.html  customers-delete.html  customers-detail.html  customers-edit.html  customers-list.html
crm/crm_app/templates/leads/: leads-create.html  leads-delete.html  leads-detail.html  leads-edit.html  leads-list.html
crm/crm_app/templates/products/: products-create.html  products-delete.html  products-detail.html  products-edit.html  products-list.html
crm/crm_app/templates/registration/: login.html
crm/crm_app/templates/users/: index.html
crm/crm_app/views/: __init__.py  ads.py  contracts.py  customers.py  leads.py  products.py  views.py
frontend/: Dockerfile  nginx.conf
migrations/: 0001_initial.py
requirements/: pyproject.toml
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/templates/: base.html
sitewomen/women/: models.py  urls.py  views.py
sitewomen/women/migrations/: 0001_initial.py
sitewomen/women/templates/women/: list_categories.html
sitewomen/women/templatetags/: women_tags.py
(+1 files in other folders)
