[tool.poetry]
name = "crm"
version = "0.1.0"
description = "crm system for buiseness"
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
django-environ = "^0.11.2"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
